[package]
name = "anyrun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = "0.11.1"
anyrun-interface = { git = "https://github.com/anyrun-template-sntx/interface" }
anyrun-macros = { git = "https://github.com/anyrun-template-sntx/macros" }
clap = { version = "4.2.7", features = ["derive"] }
gtk = "0.16.2"
gtk-layer-shell = { version = "0.5.0", features = ["v0_6"] }
nix = { version = "0.26.1", default-features = false, features = ["process"] }
ron = "0.8.0"
serde = { version = "1.0.151", features = ["derive"] }
wl-clipboard-rs = "0.7.0"
